--- a/frontendd/package.json
+++ b/frontendd/package.json
@@ -13,6 +13,7 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.11",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
